objects/Fips_Mapping_for_Plan_Batch__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this table is used to keep track if the get plan batch has been ran the fips code.</description>
    <fields>
        <fullName>Fips_Code__c</fullName>
        <label>Fips Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCSC_State__c</fullName>
        <label>HCSC State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Code_List__c</fullName>
        <description>list of the product group code belong to the state, ie. IL has 6. and separated by &apos;;&apos;</description>
        <label>Product Group Code List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group_Id__c</fullName>
        <label>Product Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if the batch is been run again this data.  the ProductGroup code batch will initialized this value to False.</description>
        <label>Run</label>
        <type>Checkbox</type>
    </fields>
    <label>Fips Mapping for Plan Batch</label>
    <listViews>
        <fullName>TX</fullName>
        <columns>NAME</columns>
        <columns>Fips_Code__c</columns>
        <columns>HCSC_State__c</columns>
        <columns>Product_Group_Code_List__c</columns>
        <columns>Run__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HCSC_State__c</field>
            <operation>equals</operation>
            <value>TX</value>
        </filters>
        <label>TX</label>
    </listViews>
</CustomObject>